--- a/package.json
+++ b/package.json
@@ -8,11 +8,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
+    "js-cookie": "^3.0.5",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
+    "dotenv-expand": "^10.0.0",
     "vite": "^4.4.11"
   }
 }
