--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aminoeditor/vue-router-seo": "^1.1.2",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "js-cookie": "^3.0.5",
+    "material-icons": "^1.13.12",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
     "vue-toastification": "^2.0.0-rc.5",
+    "vuesax3": "^4.2.1",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
