--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NODE_ENV="development"
 VUE_APP_APIURL="http://users-management.lndo.site:8000"
 VITE_API_KEY=your_api_key
-VITE_APP_URL="http://users-management.lndo.site:8000"
+VITE_APP_URL="http://acm.staging.test-dion.halcyondigitalhost.com/"
